--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
         "webpack": "^4.41.4",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.10.1"
-    }
+    },
+    "dependencies": {}
 }
