--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "file-loader": "^5.0.2",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
+        "image-webpack-loader": "^6.0.0",
         "mini-css-extract-plugin": "^0.9.0",
         "style-loader": "^1.1.1",
         "webpack": "^4.41.4",
