--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.10.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "yall-js": "^3.1.7"
+    }
 }
