changed lazyloader to lazysizes yall acting up

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "webpack-dev-server": "^3.10.1"
     },
     "dependencies": {
+        "lazysizes": "^5.2.0",
         "smooth-scroll": "^16.1.2",
-        "webpack-merge": "^4.2.2",
-        "yall-js": "^3.1.7"
+        "webpack-merge": "^4.2.2"
     }
 }
